<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rlSameAsShipping"
        android:layout_width="match_parent"
        android:layout_height="@dimen/payment_method_item_height"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/swSameAsShipping"
            android:fontFamily="@font/circularstd_medium"
            android:text="@string/airwallex_same_as_shipping"
            android:textColor="@color/airwallex_color_dark_deep"
            android:textSize="14sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swSameAsShipping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llBilling"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/airwallex_line_divider" />

        <com.airwallex.android.ui.view.AirwallexTextInputLayout
            android:id="@+id/atlFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:hint="@string/airwallex_shipping_first_name_hint" />

        <com.airwallex.android.ui.view.AirwallexTextInputLayout
            android:id="@+id/atlLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:hint="@string/airwallex_shipping_last_name_hint" />

        <com.airwallex.android.ui.view.CountryAutoCompleteView
            android:id="@+id/countryAutocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" />

        <com.airwallex.android.ui.view.AirwallexTextInputLayout
            android:id="@+id/atlState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:hint="@string/airwallex_shipping_state_name_hint" />

        <com.airwallex.android.ui.view.AirwallexTextInputLayout
            android:id="@+id/atlCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:hint="@string/airwallex_shipping_city_name_hint" />

        <com.airwallex.android.ui.view.AirwallexTextInputLayout
            android:id="@+id/atlStreetAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:hint="@string/airwallex_shipping_street_hint" />

        <com.airwallex.android.ui.view.AirwallexTextInputLayout
            android:id="@+id/atlZipCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:hint="@string/airwallex_shipping_zip_code_hint" />

        <com.airwallex.android.ui.view.AirwallexTextInputLayout
            android:id="@+id/atlEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:hint="@string/airwallex_contact_email_hint" />

        <com.airwallex.android.ui.view.AirwallexTextInputLayout
            android:id="@+id/atlPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:hint="@string/airwallex_contact_phone_number_hint" />
    </LinearLayout>

</LinearLayout>